<resources>
    <string name="app_name">Hepi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Welcome</string>
    <string name="sign_in">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up">Register</string>
    <string name="tag">tag</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome">Welcome</string>
    <string name="logout">logout</string>
    <string name="profile">profile</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="new_user"><u>New User? Click Register to create account.</u></string>
    <string name="user"><u>Already have an account!</u></string>

</resources>