<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/charcoal"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:padding="40dp"
        android:src="@mipmap/hepi"
        android:layout_centerInParent="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@+id/username"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/et_custom"
        android:drawableEnd="@drawable/ic_user"
        android:fontFamily="@font/cour"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="15dp"
        android:textColorHint="#546E7A"
        android:textColor="#546E7A"
        android:textSize="15sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/et_custom"
        android:drawableEnd="@drawable/ic_pass"
        android:fontFamily="@font/cour"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColorHint="#546E7A"
        android:textColor="#546E7A"
        android:textSize="15sp"
        android:autofillHints="" />

    <TextView
        android:id="@+id/forgetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/indigo_daisy"
        android:text="@string/forget_password"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/gold"/>

    <Button
        android:id="@+id/login_btn"
        android:text="@string/sign_in"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custom"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/indigo_daisy"
        android:textSize="25sp"
        android:textColor="@color/gold"
        android:layout_below="@+id/forgetPass"
        android:onClick="sign_in"/>

    <TextView
        android:id="@+id/newUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="45dp"
        android:layout_centerInParent="true"
        android:text="@string/new_user"
        android:elegantTextHeight="true"
        android:textColor="@color/gold"
        android:fontFamily="@font/indigo_daisy"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="50sp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/indigo_daisy"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/login_btn"
        android:layout_centerInParent="true"
        android:textColor="@color/gold"
        android:onClick="registration"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:theme="@style/progressBar"/>

</RelativeLayout>